--- a/resources/scss/pages/email-listing.scss
+++ b/resources/scss/pages/email-listing.scss
@@ -5,7 +5,7 @@ main {
   position: relative;
 
   &.is-mobile {
-    margin-top: 2rem;
+    margin-top: 4rem;
   }
 
   .email-list {
